fixes button text

--- a/scss/_component.button.scss
+++ b/scss/_component.button.scss
@@ -4,11 +4,10 @@ $button-height: $space-l;
   display: inline-block;
   padding: 0 $space-m;
   font-family: $font-family-alt;
-  font-size: modular-scale(-1);
+  // font-size: modular-scale(-1);
   font-weight: $font-weight-bold;
   line-height: $button-height;
   color: color('brand');
-  text-align: center;
   text-align: center;
   text-shadow: none;
   white-space: nowrap;
