fixes the turbolinks loader height

--- a/scss/_component.avatar.scss
+++ b/scss/_component.avatar.scss
@@ -22,7 +22,7 @@
     bottom: $space-xxs;
     left: $space-xxs;
     display: block;
-    border: $border-width-large $border-style color('bg');
+    border: $border-width-l $border-style color('bg');
     border-radius: 2000px;
     content: '';
   }
