--- a/scss/_component.divider.scss
+++ b/scss/_component.divider.scss
@@ -4,7 +4,7 @@
 
 .divider__l1 {
   @include grid-column(1);
-  height: $border-width-large;
+  height: $border-width-l;
   background-color: color('brand');
 
   @include grid-media($neat-grid-medium) {
