--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -5,8 +5,10 @@
 		{% if not hideContactOnFooter %}
 		<div class="footer__content">
 			<a class="link link--minor" href="{{ site.newsletterSignupUrl }}" rel="external">Newsletter</a>,
-      <a class="link link--minor" href="{{ site.twitterUrl}}" rel="external">Twitter</a>,
-      <a class="link link--minor" href="{{ site.facebookUrl }}" rel="external">Facebook</a>
+      <a class="link link--minor" href="{{ site.twitterUrl}}" rel="external">Twitter</a>
+      {#
+      ,<a class="link link--minor" href="{{ site.facebookUrl }}" rel="external">Facebook</a>
+      #}
 		</div>
 		{% endif %}
 		<div class="footer__legal">&copy; {{ site.date.getFullYear() }} Alaris Prime</div>
