fixes footer text size on large screens

--- a/scss/_component.footer.scss
+++ b/scss/_component.footer.scss
@@ -12,6 +12,10 @@
   @include bp(medium) {
     color: color('text-lighter');
   }
+
+  @include bp(large) {
+    font-size: modular-scale(-2);
+  }
 }
 
 .footer__content {
