--- a/scss/_settings.project.scss
+++ b/scss/_settings.project.scss
@@ -12,6 +12,7 @@ $root-space: 1rem * (($root-line-height / 2) / $root-font-size-px);
 
 $breakpoints: (
   small:   0,
+  small-medium: 375, // iPhone 6/6S
   medium:  640,
   large:   1024,
   xlarge:  1200,
