--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -1,7 +1,7 @@
 {% from "../macros/divider.njk" import divider %}
 <div class="header">
 	<div class="header__brand">
-		<a class="header__logo-link" href="/"><span class="logo">{% include "../images/logo-center-offset.svg" %}</span></a>
+		<a class="header__logo-link" href="/"><span class="logo">{% include "../images/logo.svg" %}</span></a>
 	</div>
 	<div class="header__nav">
 		<nav class="main-nav">
