changes alt family to Acumin

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -203,9 +203,8 @@ abbr {
 }
 
 .sub-title {
-  @extend %all-to-small-caps;
+  @include font-family-alt;
   margin: 0;
-  font-family: $font-family-alt;
   font-weight: $font-weight;
   color: color('text-light');
 
