--- a/scss/_component.form.scss
+++ b/scss/_component.form.scss
@@ -12,6 +12,7 @@
 .input-textarea {
   width: 100%;
   padding: ($space-m / 3);
+  font-family: $font-family;
   border: $border;
   outline: none;
 
