--- a/scss/_settings.project.scss
+++ b/scss/_settings.project.scss
@@ -77,7 +77,7 @@ $colors: (
   'text-lighter': 'grey-lighter',
   'link':         'brand',
   'link-light':   'grey' ('tint': 75%),
-  'link-hover':   'brand' ('shade': 10%),
+  'link-hover':   'brand' ('shade': 15%),
   'border':       'grey-lighter' ('tint': 30%),
   'border-dark':  'grey-lighter' ('shade': 20%),
 );
@@ -87,7 +87,7 @@ $colors: (
 // ---
 $fallback-font-families: 'Source Sans Pro', 'Open Sans', Avenir, 'Gill Sans MT', 'Gill Sans', Corbel, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-family:            'skolar-latin', $fallback-font-families;
-$font-family-alt:        'soleil', $fallback-font-families;
+$font-family-alt:        'acumin-pro', $fallback-font-families;
 
 $font-size: #{$root-font-size-px}px;
 $font-weight:      400;
@@ -98,6 +98,11 @@ $line-height:         $root-line-height / $root-font-size-px;
 $line-height-heading: 1.33333;
 
 $font-features: 'kern', 'liga'; //TODO: check 'frac' and add if required.
+
+// Adjusting the line height of the alt-font family, Acumin
+// to match that of body text family, Skolar
+$padding-top-adjust-alt-family: .066666667em; // 2px / 30px
+$padding-bottom-adjust-alt-family: .166666667em; // 5px / 30px
 
 // ---
 // Spaces
@@ -129,11 +134,15 @@ $size-xxl: $root-space * 34;
 $border-width:    1px;
 $border-width-l:  $root-space / 8;
 $border-width-xl: $root-space / 4;
-$border-radius:   3px;
+
+$border-radius:        3px;
+$border-radius-circle: 2000px;
 
 $border-style: solid;
 
-$border: $border-width $border-style color('border');
+$border:    $border-width $border-style color('border');
+$border-l:  $border-width-l $border-style color('border');
+$border-xl: $border-width-xl $border-style color('border');
 
 // ---
 // Animation
