--- a/scss/_component.hero-quote.scss
+++ b/scss/_component.hero-quote.scss
@@ -9,7 +9,8 @@
   color: color('text');
 
   @include grid-media($neat-grid-medium) {
-    @include grid-column(11);
+    @include grid-column(7);
+    @include grid-push(2);
   }
 
   @include grid-media($neat-grid-large) {
