updates CTA text on front-page

--- a/src/index.html.njk
+++ b/src/index.html.njk
@@ -32,7 +32,7 @@ description: We help businesses every step of the way in building beautiful and 
 			and many more.
 		</p>
 		<br>
-		<p>{{ contactTriggerTag(isButton=true, text = 'Let us help you in your next project →', email = site.contactEmail) }}</p>
+		<p>{{ contactTriggerTag(isButton=true, text = 'Let us help you in your next project', email = site.contactEmail) }}</p>
 	</div>
 </div>
 {% endblock %}
