updates font fallbacks to match the serif typeface

--- a/scss/_settings.project.scss
+++ b/scss/_settings.project.scss
@@ -85,7 +85,7 @@ $colors: (
 // ---
 // Typography
 // ---
-$fallback-font-families: 'Source Sans Pro', 'Open Sans', Avenir, 'Gill Sans MT', 'Gill Sans', Corbel, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$fallback-font-families: Palatino, Georgia, serif;
 $font-family:            'skolar-latin', $fallback-font-families;
 $font-family-alt:        'acumin-pro', $fallback-font-families;
 
