Added Adya.io to the portfolio.

--- a/src/index.html.njk
+++ b/src/index.html.njk
@@ -15,6 +15,7 @@ description: We help businesses every step of the way in building beautiful and 
 <div class="hero">
 	<div class="hero__text-unit">
 		<p>We have helped
+			<a class="link link--minor" href="http://www.adya.io/">Adya</a>,
 			<a class="link link--minor" href="https://www.zoho.com/">Zoho</a>,
 			<a class="link link--minor" href="http://adityabirla.com/">Aditya Birla</a>,
 			<a class="link link--minor" href="http://www.razorfish.com/">Razorfish</a>,
