--- a/src/index.html.njk
+++ b/src/index.html.njk
@@ -23,7 +23,7 @@ description: We help businesses every step of the way in building beautiful and 
 			<a class="link link--minor" href="https://www.linkedin.com/company/724333">Indianstage</a>,
 			<a class="link link--minor" href="http://www.starz.com/"><span class="caps-to-small-caps">STARZ</span></a>,
 			<a class="link link--minor" href="http://www.obeo.com/">Obeo</a>,
-			<a class="link link--minor" href="http://www.pearsoned.com/">Pearson Publishing</a>,
+			<a class="link link--minor" href="http://www.pearsoned.com/">Pearson Education</a>,
 			<a class="link link--minor" href="http://www.onmobile.com/">OnMobile</a>,
 			<a class="link link--minor" href="https://www.linkedin.com/company/zoomdeck-technologies-pvt-ltd-">Zoomdeck</a>,
 			<a class="link link--minor" href="http://www.ilfsindia.com/"><span class="caps-to-small-caps">IL&FS</span></a>,
